[package]
name = "hirust"
version = "0.1.0"
authors = ["Jack Stillwell <jack.stillwell@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
rust-crypto = "^0.2"
reqwest = "^0.9"
serde_json = "1.0"
serde = "1.0"
rand = "0.7"
cfg-if = "0.1"
mockall = "0.3.0"
pbr = "1.0"

[dev-dependencies]
galvanic-test = "0.2.0"
galvanic-assert = "0.8.7"
criterion = "0.2.11"